--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				<div class="ez cf">
 	<div class="ez-c"><div class="b b-s b-s-t150 b-s-b150 b-btn b-btn-1 wnd-align-center">
 	<div class="b-btn-c i-a">
-		<a class="b-btn-l" href=https://juliaalvarez45.github.io/web/>
+		<a class="b-btn-l" href=https://juliaalvarez45.github.io/web//>
 			<span class="b-btn-t">Inicio</span>
 		</a>
 	</div>
@@ -268,5 +268,6 @@
 					collection: "PROD",
 				}</script></body>
 </html>
+
 
 
